fix text overflow on typewriter text on title page

--- a/src/app/Home.css
+++ b/src/app/Home.css
@@ -31,6 +31,7 @@
   display: inline-block;
   animation: fadeIn var(--fade-in-duration) ease-out 0.2s forwards;
   opacity: 0;
+  
 }
 
 .name-display .title {
@@ -42,6 +43,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
+  min-width: 700px;
+  margin: 1rem auto;
 }
 
 .typing-text {
